--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"ip":"sarveshsai.aternos.me","name":"Sarvesh_Cr7","port":"24467"}
+{"ip":"Sarvesh_CR7.aternos.me","name":"Sarvesh_Cr7","port":"34546"}
